--- a/.env
+++ b/.env
@@ -4,12 +4,12 @@ CLIENT_VERSION=1.0.0
 
 DB1_NAME=GAME_DB
 DB1_USER=kms5064
-DB1_PASSWORD=Rlawpgns88!
+DB1_PASSWORD=####
 DB1_HOST=express-database.czg2queaigfo.ap-northeast-2.rds.amazonaws.com
 DB1_PORT=3306
 
 DB2_NAME=USER_DB
 DB2_USER=kms5064
-DB2_PASSWORD=Rlawpgns88!
+DB2_PASSWORD=####
 DB2_HOST=express-database.czg2queaigfo.ap-northeast-2.rds.amazonaws.com
 DB2_PORT=3306
